# verita-takehome

./: .env.example  .gitignore  DESIGN.md  README.md  decision.md  docker-compose.yml  package.json  spec.md  todo.md
backend/: Dockerfile
backend/api/: Cargo.toml
backend/api/src/: error.rs  lib.rs  main.rs  state.rs
backend/api/src/extractors/: customer.rs  customer_jwt.rs  mod.rs  ops_user.rs  webhook.rs
backend/api/src/jobs/: anomaly.rs  invoice.rs  mod.rs  window.rs
backend/api/src/routes/: mod.rs  ops.rs  v1.rs  webhooks.rs
backend/api/tests/: integration.rs
backend/migrations/: 0001_init.sql  0002_credits_idempotency.sql  0004_api_key_name.sql
backend/src/: main.rs
frontend/: package.json
frontend/customer/: package.json  tailwind.config.js  vite.config.ts
frontend/customer/src/: App.tsx  api.ts
frontend/customer/src/components/: Nav.tsx  PageLayout.tsx  SidebarLayout.tsx
frontend/customer/src/components/ui/: badge.tsx  dialog.tsx
frontend/customer/src/pages/: ApiKeysPage.tsx  Dashboard.tsx  InvoiceDetail.tsx  InvoicesPage.tsx  Login.tsx  UsagePage.tsx
frontend/ops/: Dockerfile  package.json  tailwind.config.js  vite.config.ts
frontend/ops/src/: App.tsx  api.ts  index.css
frontend/ops/src/components/: CreditDialog.tsx  IssueCreditDialog.tsx  LineItemDialog.tsx  LiquidGradient.tsx  Nav.tsx  OverrideLineItemDialog.tsx  SidebarLayout.tsx
frontend/ops/src/lib/: liquid-gradient.ts
frontend/ops/src/pages/: AnomaliesPage.tsx  CreditsPage.tsx  CustomerDetail.tsx  CustomerList.tsx  InvoicesPage.tsx  Login.tsx  OverviewPage.tsx
frontend/src/: App.tsx
(+4 files in other folders)
