[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
